# gymfc

./: .gitignore  CMakeLists.txt  baselines  requirements.txt
examples/: altitude_controller.py  pid_example.py  ppo_baselines_train.py  tf_checkpoint_evaluate.py
examples/geometric_controller/mavros/: common.py  control.py  geometric_controller.py  jerk_tracking_control.py  nonlinear_attitude_control.py  nonlinear_geometric_control.py
examples/geometric_controller/mc_simple/: base.py  gymfc_mc_simple.ini  gymfc_mc_simple.py  gymfc_mc_simple.world  rover.py
examples/geometric_controller/mc_simple/uav_simulator/: control.py  estimator.py  integral_utils.py  main.py  matrix_utils.py  rover.py  thread_control.py  trajectory.py
examples/gymfc_nf/controllers/: ZieglerNichols.py  pid.py
examples/gymfc_nf/envs/: __init__.py  base.py  ramp.py  reference.py  rewards.py  step.py
examples/gymfc_nf/policies/: baselinespolicy.py  pidpolicy.py
examples/gymfc_nf/twins/nf1/gymfc-aircraft-plugins/: CMakeLists.txt
examples/gymfc_nf/utils/: monitor.py
examples/iris_gymfc/: gymfc.ini
gazebo/models/attitude_control_training_rig/: model.sdf
gazebo/models/gps/: gps.sdf  model.config
gazebo/models/gymfc_iris/: iris-wind3d-version.sdf  model.config  model.sdf
gazebo/models/iris/: iris_testbench.sdf  model.config  model.sdf
gazebo/models/iris_gymfc/: model.config  model.sdf
gazebo/models/iris_px4/: model.sdf
gazebo/models/iris_sttr/: iris_sttr.sdf  model.config  model.sdf
gazebo/models/mc_simple/: model.config  uav.sdf
gazebo/models/nf1/: model.config  model.sdf
gazebo/models/primitive_obj/: box_01.sdf  box_02.sdf  model.config  sphere.sdf  sphere_01.sdf
gazebo/models/solo/: model.config  model.sdf
gazebo/plugins/aircraft/: CMakeLists.txt
gazebo/plugins/aircraft/include/: common.h  gazebo_imu_plugin.h  gazebo_motor_model.h
gazebo/plugins/aircraft/include/rotors_model/: motor_controller.hpp  motor_model.hpp  multi_copter.hpp
gazebo/plugins/aircraft/src/: gazebo_imu_plugin.cpp  gazebo_imu_plugin.h  gazebo_motor_model.cpp  gazebo_motor_model.h
gazebo/plugins/gazebo_ros/msgs/: SpawnSDF.proto
gazebo/plugins/gymfc/: AircraftConfigPlugin.cpp  CMakeLists.txt  FlightControllerPlugin.cpp  FlightControllerPlugin.hh
gazebo/plugins/gymfc/msgs/: Action.proto  State.proto  Wrench.proto
gazebo/plugins/gymfc_aircraft/: CMakeLists.txt
gazebo/plugins/gymfc_aircraft/include/: gymfc_imu_plugin.h  gymfc_motor_model.h
gazebo/plugins/gymfc_aircraft/src/: gymfc_imu_plugin.cpp  gymfc_imu_plugin.h  gymfc_motor_model.cpp  gymfc_motor_model.h
gazebo/plugins/mc_simple/: CMakeLists.txt
gazebo/plugins/mc_simple/include/: gazebo_ros_imu_sensor.h  gymfc_control_plugin.hpp
gazebo/plugins/mc_simple/msgs/: Pose.proto  String.proto
gazebo/plugins/mc_simple/src/: control_plugin.cpp  fdcl_ros_utils.cpp  gazebo_ros_imu_sensor.cpp  gymfc_control_plugin.cpp
gazebo/plugins/px4_aircraft/: CMakeLists.txt
gazebo/plugins/px4_aircraft/include/: common.h  gazebo_barometer_plugin.h  gazebo_gps_plugin.h  gazebo_groundtruth_plugin.h  gazebo_imu_plugin.h  gazebo_magnetometer_plugin.h  gazebo_motor_model.h  gymfc_gazebo_barometer_plugin.h  gymfc_gazebo_gps_plugin.h  gymfc_gazebo_groundtruth_plugin.h  gymfc_gazebo_imu_plugin.h  gymfc_gazebo_magnetometer_plugin.h  gymfc_gazebo_motor_model.h
gazebo/plugins/px4_aircraft/src/: gazebo_barometer_plugin.cpp  gazebo_gps_plugin.cpp  gazebo_groundtruth_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_motor_model.cpp  gymfc_gazebo_barometer_plugin.cpp  gymfc_gazebo_gps_plugin.cpp  gymfc_gazebo_groundtruth_plugin.cpp  gymfc_gazebo_imu_plugin.cpp  gymfc_gazebo_magnetometer_plugin.cpp  gymfc_gazebo_motor_model.cpp
gazebo/plugins/px4_extensions/: CMakeLists.txt
gazebo/plugins/px4_extensions/examples/: px4_extensions_controller.py
gazebo/plugins/px4_extensions/include/: gazebo_blast3d_camera_plugin.h  gazebo_blast3d_microphone_plugin.h  gazebo_blast3d_model_plugin.h  gazebo_blast3d_world_plugin.h  gazebo_wind3d_motor_model_plugin.h  gazebo_wind3d_world_plugin.h  gymfc_gazebo_blast3d_model_plugin.h  gymfc_gazebo_wind3d_motor_model_plugin.h
gazebo/plugins/px4_extensions/include/utils/: common.h
gazebo/plugins/px4_extensions/msgs/: Audio.proto  Blast3d.proto  Blast3dServerRegistration.proto  Event.proto  EventArray.proto
gazebo/plugins/px4_extensions/src/: gazebo_blast3d_camera_plugin.cpp  gazebo_blast3d_microphone_plugin.cpp  gazebo_blast3d_model_plugin.cpp  gazebo_blast3d_world_plugin.cpp  gazebo_wind3d_motor_model_plugin.cpp  gazebo_wind3d_visual_plugin.cpp  gazebo_wind3d_world_plugin.cpp  gymfc_gazebo_blast3d_model_plugin.cpp  gymfc_gazebo_wind3d_motor_model_plugin.cpp
gazebo/plugins/px4_extensions/worlds/: blast.world  blast_test.ini  blast_test.world  windy_static.world  windy_uncc_engcampus.ini  windy_uncc_engcampus.world
gazebo/plugins/src/: gazebo_motor_model.cpp
gazebo/worlds/: dyno.world  empty.world
gymfc/: gymfc.ini
gymfc/envs/: fc_env.py
gymfc/envs/assets/gazebo/worlds/: attitude.world
gymfc/msgs/: Action_pb2.py  State_pb2.py
gymfc/tools/: plot.py
openai-baseline-gymfc/baselines/common/: distributions.py  mpi_running_mean_std.py  tf_util.py
openai-baseline-gymfc/baselines/ppo1/: mlp_policy.py  pposgd_simple.py
physics_testbench/: physics_testbench.ini  physics_testbench.py  physics_testbench.world
pygazebo/: pygazebo.py
tests/: check_sim_stability.py  dyno.py  test_axis.py  test_start_sim.py  test_step_sim.py
